@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, ui: Ui): void
}

class DeleteCommand {
    - input: String
    + DeleteCommand(input: String)
    + execute(items: ItemList, ui: Ui): void
}

interface Validator <<interface>> {
    + validate(items: ItemList): void
}

class DeleteCommandValidator {
    - input: String
    + DeleteCommandValidator(input: String)
    + validate(items: ItemList): void
}

class ItemList {
    + deleteItem(index: int): Item
    + size(): int
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. DeleteCommand
Validator <|.. DeleteCommandValidator

DeleteCommand ..> DeleteCommandValidator : <<creates>>
DeleteCommand ..> ItemList : modifies >
DeleteCommand ..> Ui : <<uses>>
DeleteCommandValidator ..> ItemList : reads >

@enduml